--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
-MONGO_URI='mongodb+srv://adebayobidemi36:Omotoyosi12345@cluster0.l6hfemt.mongodb.net/node_js'
+MONGO_URI='mongodb://localhost:27017/admin'
 SECRET_KEY ='Abidemi12345/*class=nodejsr'
 
